--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -41,11 +41,11 @@
 
 	<li>
 	  <h2>口コミであんしん！</h2>
-	  <p>他の利用者の方からの。口コミを見ることができます。口コミから当日どんな様子なのか分かるようになります。（是非口コミ投稿にご協力ください！）</p>
+	  <p>他の利用者の方からの口コミを見ることができます。口コミから当日どんな様子なのか、良い点が分かるようになります。（是非口コミ投稿にご協力ください！）</p>
 	</li>
 	<li>
 	 <h2>事前情報をチェック！</h2>
-	 <p>シークルでは各店舗のプロフィールを見ることができます。また、質問・相談等があれば事前に店舗にお問い合わせすることも可能です。</p>
+	 <p>シークルでは各店舗の情報、プロフィールを見ることができます。また、質問・相談等があれば事前に店舗にお問い合わせすることも可能です。</p>
 	</li>
 </ul>
 
