--- a/app/assets/stylesheets/home/mobilehead.scss
+++ b/app/assets/stylesheets/home/mobilehead.scss
@@ -47,14 +47,14 @@ $app-container-width: $screen-desktop !default;
     transition:all .5s
  }
   .upper-menu ul {
-    margin-left: 9%;
+    margin-left: -5%;
   }
  .upper-menu ul li{
     margin-top:16px;
     text-transform:uppercase;
     font-size:14px;
     font-weight:700;
-    width:10%;
+    width:14%;
     float:left;
     box-sizing:border-box;
     border-right:1px solid #ebebeb;
@@ -130,7 +130,7 @@ $app-container-width: $screen-desktop !default;
 
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: $screen-tablet) {
     #top-head,
     .inner {
         width: 100%;
@@ -233,10 +233,7 @@ $app-container-width: $screen-desktop !default;
         transform: translateY(556px);
     }
 
-     .up-var{
-    display:none;
- }
-
+ 
  .provider-header{
     display:none;
  }
@@ -264,6 +261,10 @@ header#top-head{
 .logo{
     display:none;
 }
+    .up-var{
+    display:none;
+ }
+
 
 .container_head{
 display: none;
