--- a/app/views/category/_header.html.erb
+++ b/app/views/category/_header.html.erb
@@ -2,6 +2,7 @@
 <div class="up-var">
  <div class="upper-menu">
     <div class="wrapper" >
+    <div class="main-container">
     <ul>
      <li><a href="/category/housing?category=住まい">住まい</a></li>
     <li><a href="/category/event/?category=イベント">イベント</a></li>
@@ -10,10 +11,11 @@
     <li><a href="/category/others/?category=その他">その他</a></li>
   </div>
     </ul>
+    
+</div>
     </div>
   </div>
   </div>
 
 
   
-
