--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -1,6 +1,7 @@
 <div class="up-var">
   <div class="upper-menu">
     <div class="wrapper" >
+        <div class="main-container">
       <ul>
         <li><a href='/users'>マイページ</a></li>
          <li><a href='/mailbox/inbox'>メッセージ<div class="bootstrap">
@@ -8,6 +9,7 @@
           <li><a href='/reservations/list'>取引履歴</a></li>
         <li><a href='/users/edit'>基本設定</a></li>
       </ul>
+      </div>
     </div>
   </div>
 </div>
