--- a/app/views/reservations/list.html.erb
+++ b/app/views/reservations/list.html.erb
@@ -2,12 +2,14 @@
 <div class="up-var">
   <div class="upper-menu">
     <div class="wrapper" >
+            <div class="main-container">
       <ul>
         <li><a href='/users'>マイページ</a></li>
          <li><a href='/mailbox/inbox'>メッセージ
         <li><a href='/reservations/list'>取引履歴</a></li>
         <li><a href='/users/edit'>基本設定</a></li>
       </ul>
+      </div>
     </div>
   </div>
 </div>
