--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,6 +3,7 @@
 <div class="up-var">
   <div class="upper-menu">
     <div class="wrapper" >
+    <div class="main-container">
       <ul>
         <li><a href='/users'>マイページ</a></li>
          <li><a href='/mailbox/inbox'>メッセージ
@@ -10,6 +11,7 @@
         <li><a href='/users/edit'>基本設定</a></li>
        
       </ul>
+      </div>
     </div>
   </div>
 </div>
@@ -96,7 +98,6 @@
 </div>
 
 </div>
-
 
 
 
