--- a/app/views/home/pro.html
+++ b/app/views/home/pro.html
@@ -40,7 +40,7 @@
    <h2>登録費、掲載費無料！</h2>
 
    <p>初期費用・月額費用・掲載料は、すべて0円。予約確定ではじめて売り上げから10%の予約手数料が発生します。
-今なら予約手数料も初回1回は完全無料です。
+<span class="now_its_free">ですが、今なら予約手数料完全無料でご利用が可能！</span>
 
    </p>
 
@@ -54,7 +54,6 @@
     <h2>口コミを集めましょう！</h2>
     <p>サービス提供後、お客さんがサービスに対してのレビューを書きます。たくさんの良い口コミを集めてたくさんの人に人気店舗として知ってもらいましょう！</p>
   </div>
-
 
 </div>
 </div>
