--- a/app/views/reservations/detail.html.erb
+++ b/app/views/reservations/detail.html.erb
@@ -1,6 +1,7 @@
 <div class="up-var">
   <div class="upper-menu">
     <div class="wrapper" >
+    <div class="main-container">
       <ul>
         <li><a href='/users'>マイページ</a></li>
          <li><a href='/mailbox/inbox'>メッセージ
@@ -8,6 +9,7 @@
         <li><a href='/users/edit'>基本設定</a></li>
        
       </ul>
+      </div>
     </div>
   </div>
 </div>
