--- a/app/views/company/index.html.erb
+++ b/app/views/company/index.html.erb
@@ -26,11 +26,10 @@
    </p>
  </div>
 
-   <h3>キュレーションメディア事業  <span class="big_seekle"><%= link_to "Seekle ジャーナル","http://articles.seekle.jp/" %></span></h3>
+     <h3>VRクラウドソーシング事業  <span class="big_seekle"><%= link_to "VR Labo","http://vrlabo.jp/" %></span></h3>
       <div class="company_service_mission">
-<p>『Seekle メディア』は、“安心できる地域のサービス情報サイト”をテーマに、地域で活躍する様々なカテゴリの店舗、教室、人物、そして最新のトレンドサービスやトピックスから生活に活かせるコト学び、日々のくらしに関わる魅力的なサービスを発見できるキュレーションメディアです。</p>
+<p>VRLaboでは"VRコンテンツ制作どこに頼めばいいか分からない"お客様のコンテンツ制作のご要望を聞き、そのご要望に適切な弊社提携コンテンツ制作会社・フリーランスエンジニアに案件を回し、お客様の代わりとなってディレクティングをしていきます。</p>
 </div>
-
 
 </div>
 
