--- a/app/views/company/index.html.erb
+++ b/app/views/company/index.html.erb
@@ -16,20 +16,26 @@
      <h2>About Our Service</h2>
    </div>
 
-   <h3>サービスプラットフォーム事業  <span class="big_seekle"><%= link_to "Seekle",root_path %></span></h3>
+    <h3>サービスプラットフォーム事業  <span class="big_seekle"><%= link_to "Seekle",root_path %></span></h3>
 
    <div class="company_service_mission">
 
-    <p>価格・サービスの質・スタッフの対応を全て合わせてどのサービス、店舗がベストなのか。どこに頼めば失敗しないのか。を明確にし、安心できるサービスを提供します。<br><br>
-     また、サービス提供者の方の集客、口コミ集めなど、Seekleを通してサポートを努め、ホームページを作る必要なく広告塔となり、ビジネスを始めやすい環境を創り、日本のビジネスインフラを整備していきます。
+    <p>価格・サービスの質・スタッフの対応を全て合わせてどのサービス、店舗がベストなのか。どこに頼めば失敗しないのか。を明確にし、安心できるサービスの選び方を提供します。
      <%= link_to  'アカウントを登録する',"/users/sign_up"%>
    </p>
  </div>
 
-     <h3>VRクラウドソーシング事業  <span class="big_seekle"><%= link_to "VR Labo","http://vrlabo.jp/" %></span></h3>
-      <div class="company_service_mission">
-<p>VRLaboでは"VRコンテンツ制作どこに頼めばいいか分からない"お客様のコンテンツ制作のご要望を聞き、そのご要望に適切な弊社提携コンテンツ制作会社・フリーランスエンジニアに案件を回し、お客様の代わりとなってディレクティングをしていきます。</p>
-</div>
+
+   <h3>芸能人キュレーションメディア事業  <span class="big_seekle"><%= link_to "STARSNAP","http://www.starsnap.jp/" %></span></h3>
+    <div class="company_service_mission">
+    <p>大人気芸能人から読者モデル・話題の人まで、あらゆるジャンルの人物を取り上げ、彼らのファッションやメイク・ネイルについての充実したコンテンツを提供します。</p>
+  </div>
+
+    <h3>VRクラウドソーシング事業  <span class="big_seekle"><%= link_to "VR Labo","http://vrlabo.jp/" %></span></h3>
+    <div class="company_service_mission">
+    <p>VRLaboではお客様のVRコンテンツ制作のご要望を聞き、そのご要望に適切な弊社提携コンテンツ制作会社・フリーランスエンジニアに案件を回し、お客様の代わりとなってディレクティングをしていきます。</p>
+  </div>
+
 
 </div>
 
